# FreqPartitionDict

./: .gitignore  CMakeLists.txt  IMPROVEMENT_PLAN.md  IMPROVEMENT_PROGRESS.md  LICENSE  PROJECT_EVALUATION_REPORT.md  README.md  README_CN.md  README_EN.md  初步方案.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  benchmark.cpp  benchmark_cache_comparison.cpp  benchmark_concurrent.cpp  benchmark_real_workload.cpp  benchmark_stability.cpp
docs/: TECHNICAL_PAPER_CN.md  TECHNICAL_PAPER_EN.md  complexity.md  design.md  optimized_versions.md  performance_analysis.md
docs/latex/: paper_cn.tex  paper_en.tex
examples/: CMakeLists.txt  basic_usage.cpp  zipf_demo.cpp
include/: cache_comparison.hpp  cold_zone.hpp  cold_zone_optimized.hpp  freq_partition_dict.hpp  freq_partition_dict_heap.hpp  freq_partition_dict_optimized.hpp  freq_partition_dict_threadsafe.hpp  hot_zone.hpp  hot_zone_heap.hpp  hot_zone_optimized.hpp
results/figures/: performance_summary.txt  statistical_report.txt
scripts/: statistical_analysis.py  visualize_performance.py
tests/: CMakeLists.txt  test_correctness.cpp  test_optimized_versions.cpp  test_properties.cpp
